--- a/index.html
+++ b/index.html
@@ -513,7 +513,92 @@
             </li>
           </ul>
         </div>
+        <div class="footer-form-container">
+          <h3 class="title-footer-form">Subscribe</h3>
+          <form class="footer-form">
+            <input
+              type="email"
+              name="sbc-form"
+              placeholder="E-mail"
+              class="footer-form-input"
+            />
+            <button type="submit" class="sbc-button">
+              Subscribe
+              <svg width="24" height="24" class="footer-button-picture">
+                <use href="./images/icons.svg#icon-plane"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
+
+    <div class="modal-overlay">
+      <div class="modal">
+        <div class="modal-icon">
+          <svg width="8" height="8" class="modal-icon-close">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </div>
+        <h3 class="modal-title">
+          Leave your contacts and we will call you back
+        </h3>
+        <form class="modal-form">
+          <label class="modal-form-label"
+            >Name
+            <div class="input-wraper">
+              <svg width="12" height="12" class="input-icon">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+              <input
+                type="text"
+                name="name"
+                class="modal-form-input name-input"
+                autofocus
+                required
+              />
+            </div>
+          </label>
+          <label class="modal-form-label"
+            >Phone<input
+              type="tel"
+              name="phone"
+              class="modal-form-input"
+              required
+          /></label>
+          <label class="modal-form-label"
+            >Email<input
+              type="email"
+              name="email"
+              class="modal-form-input"
+              required
+          /></label>
+          <label class="modal-form-label"
+            >Comment
+            <textarea
+              name="comment"
+              rows="5"
+              placeholder="Text input"
+              class="modal-text-input"
+              required
+            ></textarea>
+          </label>
+          <div class="modal-checkbox">
+            <label class="modal-checkbox-label"
+              ><input
+                type="checkbox"
+                name="check"
+                class="modal-checkbox-input"
+                required
+              />I accept the terms and conditions of the&nbsp;
+              <span
+                ><a class="modal-policy-link" href="">Privacy Policy</a></span
+              ></label
+            >
+          </div>
+          <button type="submit" class="modal-button">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
