--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
           </ul>
         </div>
         <div class="footer-form-container">
-          <h3 class="title-footer-form">Subscribe</h3>
+          <p class="title-footer-form">Subscribe</p>
           <form class="footer-form">
             <input
               type="email"
