--- a/index.html
+++ b/index.html
@@ -516,12 +516,13 @@
         <div class="footer-form-container">
           <p class="title-footer-form">Subscribe</p>
           <form class="footer-form">
-            <input
-              type="email"
-              name="sbc-form"
-              placeholder="E-mail"
-              class="footer-form-input"
-            />
+            <label class="footer-form-label">
+              <input
+                type="email"
+                name="sbc-form"
+                placeholder="E-mail"
+                class="footer-form-input"
+            /></label>
             <button type="submit" class="sbc-button">
               Subscribe
               <svg width="24" height="24" class="footer-button-picture">
