--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
               ></label
             >
           </div>
-          <button type="submit" class="modal-button">Send</button>
+          <button type="button" class="modal-button">Send</button>
         </form>
       </div>
     </div>
