--- a/index.html
+++ b/index.html
@@ -536,11 +536,11 @@
 
     <div class="modal-overlay">
       <div class="modal">
-        <div class="modal-icon">
+        <button type="button" class="modal-icon">
           <svg width="8" height="8" class="modal-icon-close">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
-        </div>
+        </button>
         <h3 class="modal-title">
           Leave your contacts and we will call you back
         </h3>
@@ -595,7 +595,7 @@
               ></label
             >
           </div>
-          <button type="button" class="modal-button">Send</button>
+          <button type="submit" class="modal-button">Send</button>
         </form>
       </div>
     </div>
