--- a/index.html
+++ b/index.html
@@ -541,9 +541,7 @@
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
-        <h3 class="modal-title">
-          Leave your contacts and we will call you back
-        </h3>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form">
           <label class="modal-form-label"
             >Name
