--- a/index.html
+++ b/index.html
@@ -543,6 +543,7 @@
         </button>
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form">
+          <div class="input-wraper"></div>
           <label class="modal-form-label"
             >Name
             <svg width="12" height="12" class="input-icon">
