--- a/index.html
+++ b/index.html
@@ -543,20 +543,21 @@
         </button>
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form">
-          <div class="input-wraper"></div>
-          <label class="modal-form-label"
-            >Name
-            <svg width="12" height="12" class="input-icon">
-              <use href="./images/icons.svg#icon-person"></use>
-            </svg>
-            <input
-              type="text"
-              name="name"
-              class="modal-form-input name-input"
-              autofocus
-              required
-            />
-          </label>
+          <div class="input-wraper">
+            <label class="modal-form-label"
+              >Name
+              <svg width="12" height="12" class="input-icon">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+              <input
+                type="text"
+                name="name"
+                class="modal-form-input name-input"
+                autofocus
+                required
+              />
+            </label>
+          </div>
           <label class="modal-form-label"
             >Phone<input
               type="tel"
