--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
             />
             <label class="modal-checkbox-label" for="user-privacy">
               <span class="modal-policy-span">
-                <svg whith="10" height="8" class="form-tick">
+                <svg width="10" height="8" class="form-tick">
                   <use href="./images/icons.svg#icon-tick"></use>
                 </svg> </span
               >I accept the terms and conditions of the
